.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0 - Unreleased
----------------

- Moved all CSS styles to plonetheme.classic package. plonetheme.sunburst is
  now default theme, both are installed by default, classic theme may be
  uninstalled, sunburst theme can't be uninstalled. 
  [limi, naro]

- Added site_encoding and bodyClass methods to the @@plone view. These should
  simplify main template a bit.
  [naro]

- Avoid AttributeError while getting the CMF version for the
  plone_control_panel when enable-product-installation is off in
  zope.conf.
  [maurits]

- Fixed bad internationalized messages in logged_out.pt
  [vincentfretin]

- Changed default message for label_show_all msgid from "Show all..." to
  "Show all items" in livesearch_reply.py to be the same as in folder_contents
  view which use the same msgid.
  [vincentfretin]  

- Use the new ``pas_member`` view in the overview templates. This avoids
  getting the member info for each item in the listing from the PAS internals.
  [hannosch]

- registerNotify and mailPassword now send properly encoded emails.
  Fixes http://dev.plone.org/old/plone/ticket/9659
  [alecm]

- Deprecated register.py and join_form.cpt. This functionality has been moved 
  to plone.app.users.
  [esteele]

- Changed ``listActions`` on the workflow tool to no longer call the
  ``listGlobalActions`` method on every installed workflow. This method would
  internally call and calculate the worklist (reviewer_queue) for every
  workflow. The listActions method is called by the workflow menu to show the
  state drop down menu on almost all pages.
  [hannosch]

- Deprecated the ``selectedTabs`` script in favor of a method on the
  GlobalSectionsViewlet.
  [hannosch]

- Micro-optimize the CatalogNavigationTabs view.
  [hannosch]
